Feature/w-18572697 text gen header changes and cleanup (#147)
* Update individual getheader methods

* Cleanup: Remove unnecessary overridden methods